fix: OpenTime 필드 수정